--- a/ProyectoFinal-Prog2/src/main/webapp/css/styles.css
+++ b/ProyectoFinal-Prog2/src/main/webapp/css/styles.css
@@ -254,3 +254,10 @@ button {
 .register-link p a:hover {
   text-decoration: underline;
 }
+/* Estilos de flota */
+.titulo-boton {
+  font-size: 32px;
+  font-weight: 400;
+  text-align: center;
+  color: green;
+}
