--- a/ProyectoFinal-Prog2/src/main/webapp/css/styles.css
+++ b/ProyectoFinal-Prog2/src/main/webapp/css/styles.css
@@ -141,10 +141,13 @@ body {
 }
 
 .card img {
-  width: 100%;
-  border-radius: 6px;
-  margin-bottom: 10px;
+ width: 180px;         
+  height: 120px;        
+  object-fit: contain;  
+  margin: 0 auto 8px;
+  display: block;
 }
+ 
 
 .card .datos-auto {
   display: flex;
@@ -280,6 +283,27 @@ section {
   line-height: 57px;
 }
 
+.remember-forgot {
+  margin: -15px 0 15px;
+  font-size: .9em;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+}
+
+.remember-forgot label input {
+  margin-right: 3px;
+}
+
+.remember-forgot a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.remember-forgot a:hover {
+  text-decoration: underline;
+}
+
 button {
   width: 100%;
   height: 40px;
@@ -291,6 +315,23 @@ button {
   font-size: 1em;
   color: #000;
   font-weight: 500;
+}
+
+.register-link {
+  font-size: .9em;
+  color: #fff;
+  text-align: center;
+  margin: 25px 0 10px;
+}
+
+.register-link p a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.register-link p a:hover {
+  text-decoration: underline;
 }
 
 /* -------------------- Reserva --------------------- */
